# xbad

./: .gitignore  LICENSE  README.md  requirements.txt  setup.cfg  setup.py  update-requirements.sh
docs/: conf.py  index.rst
examples/: run_experiment.py
notebooks/: XAI_on_CIFAR10.ipynb  XAI_on_ImageNet.ipynb  XAI_on_VOC.ipynb
smbd/: __init__.py  alexnet.py  pipeline.py  snapshot.py  utils.py
smbd/data/: pascal_voc_class_index.json
smbd/datasets/: biased.py  heatmap.py
tests/: test_pipeline.py  test_utils.py
