[metadata]
name = SMBD
version = VERSION
author = Marco Pacini
author_email = marco.pacini@santannapisa.it
description = SMBD automates and extends Spectral Relevance Analysis
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pacinigit/smbd
keywords = machine-learning, bias, spray
project_urls =
    Bug Tracker = https://github.com/pacinigit/smbd/issues
classifiers =
    Framework :: PyTorch
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Artificial Intelligence
license_files = LICENSE

[options]
packages = find:
python_requires = >=3.6
zip_safe = False
include_package_data = True
scripts =
    examples/run_experiment.py
install_requires =
    captum==0.3.1
    docutils==0.16
    flake8==3.9.0
    h5py==3.1.0
    matplotlib==3.3.4
    numpy==1.19.5
    Pillow==7.2.0
    pylint==2.6.0
    pytest==6.2.2
    PyYAML==5.3.1
    scikit-learn==0.24.1
    scipy==1.5.4
    simplejson==3.13.2
    Sphinx==3.5.2
    toml==0.10.1
    torch==1.7.0+cu101
    torchvision==0.8.1+cu101
    twine==3.1.1

[options.packages.find]
where = smbd

[options.package_data]
smbd =
    *.json
    *.ipynb

[flake8]
# E501 line too long
# W503 line break before binary operator
# W504 line break after binary operator
max-line-length = 88
ignore = E501,W503,W504